# logic_sat2B

./: .gitignore  README.md  pyproject.toml
