[tool.poetry]
name = "sat2b"
version = "0.1.0"
description = "Solve the SAT 2B bonus example automatically."
authors = ["Andreas Kostyrka"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
